--- a/public/eliavco/index.html
+++ b/public/eliavco/index.html
@@ -72,9 +72,9 @@ a {
       <div class="main-icon text-success"><span class="uxicon uxicon-clock-refresh"></span></div>
       <h1>This is a home of somethings quite cool...</h1>
       <p class="lead">If you are a <strong>visitor</strong>, check this page back soon to see my portfolio here.</p>
-      <p class="lead"><strong>For now, check:</strong> <a href="/home">home</a>, <a href="/budgety">budgety</a>, <a href="/pig">pig</a>, <a href="/forkify">forkify</a>, <a href="/natours">natours</a>, <a href="/trello">trello</a>, <a href="/nexter">nexter</a></p>
-      <p class="lead"><strong>My New Powerful Website powered with a Node-Express-Mongo backend:</strong> <a href="https://natours-eliav.herokuapp.com/">Natours Webapp</a></p>
-      <p class="lead"><strong>Check out my CV here: </strong><a href="/cv/resume.pdf">Eliav Cohen - resume</a>.</p>
+      <p class="lead"><strong>For now, check:</strong> <a href="/eliavco/home">home</a>, <a href="/eliavco/budgety">budgety</a>, <a href="/eliavco/pig">pig</a>, <a href="/eliavco/forkify">forkify</a>, <a href="/eliavco/natours">natours</a>, <a href="/eliavco/trello">trello</a>, <a href="/eliavco/nexter">nexter</a></p>
+      <p class="lead"><strong>My New Powerful Website powered with a Node-Express-Mongo backend:</strong> <a href="/">Natours Webapp</a></p>
+      <p class="lead"><strong>Check out my CV here: </strong><a href="/">Eliav Cohen - resume. NOTE: The CV is not available for now.</a>.</p>
     </div>
   </div>
 
