--- a/public/eliavco/budgety/index.html
+++ b/public/eliavco/budgety/index.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link href="style.css" type="text/css" rel="stylesheet">
-        <link rel="shortcut icon" type="image/x-icon" href="coin.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="coin.png">
         <title>Budgety</title>
     </head>
     <body>
