--- a/public/eliavco/omnifood/index.html
+++ b/public/eliavco/omnifood/index.html
@@ -465,8 +465,8 @@
         <!-- JavaScripts -->
         <div>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-            <!-- <script src="https://unpkg.com/ionicons@4.4.8/dist/ionicons.js"></script> -->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.css"></script>
+            <script src="https://unpkg.com/ionicons@4.4.8/dist/ionicons.js"></script>
+            <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.css"></script> -->
             <script src="vendors/js/imakewebthings-waypoints-34d9f6d/lib/jquery.waypoints.min.js"></script>
             <script src="resources/js/select.js"></script>
             <script src="resources/js/script.js"></script>
